# top10_and_shared_ptr

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: ExtractTopN.h  FileArrayReader.h  FileReader.h  IBlockBuffer.h  IFileReader.h  shared_ptr.h
src/: ExtractTopN.cpp  FileArrayReader.cpp  FileReader.cpp  main.cpp
tests/: CMakeLists.txt  test_ExtractTopN.cpp  test_FileArrayReader.cpp  test_shared_ptr.cpp
